Cleaned code. Fixed flaw in Method & Constructor that erased multiple method signatures with matching parameter counts.